--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-console": "off",
         "no-restricted-syntax": "off"
     }
 }
